--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {},
   "devDependencies": {
     "abstract-chunk-store": "^1.0.0",
-    "standard": "^5.0.2",
+    "standard": "*",
     "tape": "^4.1.0"
   },
   "homepage": "https://github.com/mafintosh/memory-chunk-store",
