--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "bugs": {
     "url": "https://github.com/mafintosh/memory-chunk-store/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "queue-microtask": "^1.2.2"
+  },
   "devDependencies": {
     "abstract-chunk-store": "^1.0.0",
     "standard": "*",
