--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,4 +13,4 @@ updates:
       interval: daily
     labels:
       - dependency
-    versioning-strategy: increase-if-necessary
+    versioning-strategy: increase
